# mlai_hackathon

./: README.md  example.credentials.json
bot/: Dockerfile  environment.py  evaluate.py  gen_data.py  pyproject.toml  test_environment.py  test_evaluate.py
bot/data/: NEM_SA1_test_data.csv  april15-may7_2023.csv
submission_backend/: .credentials.json  .gitignore  README.md  crawler.py  dock.py  docker-compose.yaml  energy_db.py  eval_task.py  faux_submissions.py  kickoff_task.py  leaderboard_db.py  mock_task_get_data.py  mock_task_run_submission.py  mock_task_run_submissions.py  poll.py  pyproject.toml  pytestutils.py  repo_poll_task.py  task_manager.py  task_manager_utils.py  team_db.py  test_crawler.py  test_energy_db.py  test_eval_task.py  test_kickoff_task.py  test_leaderboard_db.py  test_task_manager.py  test_team_db.py
submission_backend/data/: example_submission_database.json
submission_backend/docker_dynamodb/: shared-local-instance.db
submission_backend/networkblock/: Dockerfile  ping_example.py
submission_backend/onem/: README.md  polar.py  process_raw.py  run.py  view.py
submission_backend/output/: 2513898d-e575-4504-873d-da8ac6342259.csv  25df07d9-b88d-41d5-a7b4-b836273ab678.json  26da57ff-2655-4d31-aa95-0279db3c28dc.csv  873d3602-0afc-4bb5-8ece-006695a934b2.csv  a3ad04b9-2af1-4cd9-8caf-7f9a881ef5fe.json  fce2ee3b-d38c-4a06-af5a-fac4a5889f9b.json
submission_backend/terraform/environments/production/: main.tf
submission_backend/terraform/environments/staging/: main.tf
submission_backend/terraform/main/: databases.tf  server.tf
(+7 files in other folders)
