[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "submission-backend"
description = "ML/A.I AUS April 2024 Hack-a-thon energy trading evaluation"
dynamic = ["version"]
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
  "boto3>=1.34.59",
  "certifi==2024.2.2",
  "charset-normalizer==3.3.2",
  "docker==7.0.0",
  "idna==3.6",
  "packaging==23.2",
  "requests==2.31.0",
  "urllib3==2.2.1",
  "click", 
  "flask",
  "pytest"
]

[project.optional-dependencies]
lint = [
  "MyPy >= 0.930",
  "PyLint >= 2.12.2",
  "Black >= 21.12"
]

test = [
  "PyTest >= 6.2.5"
]

[tool.setuptools]
py-modules = []
